SFDC Automation/src/objects/Rental_Rates__c.object
<CustomObject>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <label>Branch Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Category_Code__c</fullName>
        <label>Class Category Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Code__c</fullName>
        <label>Class Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Description__c</fullName>
        <label>Class Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_No__c</fullName>
        <label>Customer No</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Rate__c</fullName>
        <label>Daily Rate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_Code__c</fullName>
        <label>District Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FIS Account</label>
        <referenceTo>FIS_Account__c</referenceTo>
        <relationshipLabel>Rental Rates</relationshipLabel>
        <relationshipName>Rental_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LesseeNo__c</fullName>
        <label>Lessee No</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage_Rate__c</fullName>
        <label>Mileage Rate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Rate__c</fullName>
        <label>Monthly Rate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Frequency__c</fullName>
        <label>Rate Frequency</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_Rate__c</fullName>
        <label>Refer Rate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Rate_Flag__c</fullName>
        <label>Special Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standby_Rate__c</fullName>
        <label>Standby Rate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Rental Rates</relationshipLabel>
        <relationshipName>Rental_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Weekly_Rate__c</fullName>
        <label>Weekly Rate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ext_rates__c</fullName>
        <externalId>true</externalId>
        <label>ext_rates</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Rental Rates</label>
    <nameField>
        <displayFormat>RR-{000000}</displayFormat>
        <label>Rental Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rental Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>